--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "jo_node",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'"
   },
   "keywords": [],
   "author": "",
